#8856 template instantiation